台帳 #85: 模擬レビュー 1 周目のトリアージ（本文の欠陥 13・user 判断 4・却下 3・ガイドの欠陥 6）